add changes to v1 e-duck

--- a/staff/christian-haag/e-duck/index.html
+++ b/staff/christian-haag/e-duck/index.html
@@ -24,7 +24,7 @@
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/duck-item.jsx" type="text/babel"></script>
     <script src="components/duck-detail.jsx" type="text/babel"></script>
-    <script src="components/favourite.jsx" type="text/babel"></script>
+    <script src="components/favorite.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
