--- a/staff/christian-haag/e-duck/index.html
+++ b/staff/christian-haag/e-duck/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>
@@ -19,11 +19,13 @@
     <script src="utils/call.js"></script>
     <script src="data/index.js"></script>
     <script src="logic/index.js"></script>
-    <script src="components/button.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/duck-item.jsx" type="text/babel"></script>
     <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/fav-button.jsx" type="text/babel"></script>
+    <script src="components/favorites.jsx"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
