--- a/staff/jose-ortuno/e-duck/index.html
+++ b/staff/jose-ortuno/e-duck/index.html
@@ -21,13 +21,15 @@
     <script src="logic/index.js"></script>
 
 
-    <script src="components/register.jsx" type="text/babel"></script>
-    <script src="components/login.jsx" type="text/babel"></script>
-    <script src="components/duck-detail.jsx" type="text/babel"></script>
-    <script src="components/duck-item.jsx" type="text/babel"></script>
-    <script src="components/results.jsx" type="text/babel"></script>
-    <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
+    <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
+    <script src="components/register.jsx" type="text/babel"></script>
+    <script src="components/register-succes.jsx" type="text/babel"></script>
+    <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/duck-item.jsx" type="text/babel"></script>
+    <script src="components/duck-detail.jsx" type="text/babel"></script>
 
     <script src="index.jsx" type="text/babel"></script>
 </body>
