--- a/staff/jaume-villarreal/e-duck/index.html
+++ b/staff/jaume-villarreal/e-duck/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>
@@ -28,6 +28,8 @@
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/duck-item.jsx" type="text/babel"></script>
     <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
