--- a/staff/manuel-barzi/e-duck/3/index.html
+++ b/staff/manuel-barzi/e-duck/3/index.html
@@ -30,6 +30,7 @@
     <script src="components/duck-detail.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
+    <script src="components/modal/index.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
