--- a/staff/jaume-villarreal/e-duck/SpecRunner.html
+++ b/staff/jaume-villarreal/e-duck/SpecRunner.html
@@ -17,6 +17,7 @@
 
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
+  <script src="utils/validate/index.js"></script>
   <script src="logic/index.spec.js"></script>
 </head>
 
