--- a/staff/jaume-villarreal/e-duck/index.html
+++ b/staff/jaume-villarreal/e-duck/index.html
@@ -16,6 +16,7 @@
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
 
+    <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
     <script src="logic/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
