update logic and testing

--- a/staff/jaume-villarreal/e-duck/SpecRunner.html
+++ b/staff/jaume-villarreal/e-duck/SpecRunner.html
@@ -14,6 +14,7 @@
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
   <script src="logic/index.js"></script>
+  <script src="logic/retrieve-user.js"></script>
   <script src="logic/register-user.js"></script>
   <script src="logic/authenticate-user.js"></script>
 
@@ -21,6 +22,7 @@
   <script src="utils/call/index.spec.js"></script>
   <script src="utils/validate/index.js"></script>
   <script src="logic/index.spec.js"></script>
+  <script src="logic/retrive-user.spec.js"></script>
   <script src="logic/register-user.spec.js"></script>
   <script src="logic/authenticate-user.spec.js"></script>
 </head>
