update testing and users logic

--- a/staff/jaume-villarreal/e-duck/SpecRunner.html
+++ b/staff/jaume-villarreal/e-duck/SpecRunner.html
@@ -14,17 +14,24 @@
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
   <script src="logic/index.js"></script>
-  <script src="logic/retrieve-user.js"></script>
-  <script src="logic/register-user.js"></script>
-  <script src="logic/authenticate-user.js"></script>
+  <script src="logic/register-user/index.js"></script>
+  <script src="logic/authenticate-user/index.js"></script>
+  <script src="logic/retrieve-user/index.js"></script>
+  <script src="logic/search-ducks/index.js"></script>
+  <script src="logic/retrieve-duck/index.js"></script>
+  <script src="logic/toggle-fav-duck/index.js"></script>
+  <script src="logic/retrieve-fav-ducks/index.js"></script>
 
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
   <script src="utils/validate/index.js"></script>
-  <script src="logic/index.spec.js"></script>
-  <script src="logic/retrive-user.spec.js"></script>
-  <script src="logic/register-user.spec.js"></script>
-  <script src="logic/authenticate-user.spec.js"></script>
+  <script src="logic/register-user/index.spec.js"></script>
+  <script src="logic/authenticate-user/index.spec.js"></script>
+  <script src="logic/retrieve-user/index.spec.js"></script>
+  <script src="logic/search-ducks/index.spec.js"></script>
+  <script src="logic/retrieve-duck/index.spec.js"></script>
+  <script src="logic/toggle-fav-duck/index.spec.js"></script>
+  <script src="logic/retrieve-fav-ducks/index.spec.js"></script>
 </head>
 
 <body>
