call logic first commit

--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -12,9 +12,14 @@
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="utils/call/index.js"></script>
+  
 
 
   <!-- include spec files here... -->
+  <script src="utils/call/index.spec.js"></script>
+
+
 
 </head>
 
