initial app update

--- a/staff/ara-manjon/initial-app/index.html
+++ b/staff/ara-manjon/initial-app/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <main>
-        <h1>Initial App</h1>
+        <h1>Duck App</h1>
 
         <!-- Landing -->
         <section class="landing show">
-            <a href="">Register</a> or <a href="">Login</a>.
+            <a href="">Sign Up</a> or <a href="">Log In</a>.
         </section>
 
         <!-- Register -->
@@ -29,7 +29,7 @@
                 <input type="email" id="email">
                 <label for="password">Password</label>
                 <input type="password" id="password">
-                <button type="submit">Register</button>
+                <button type="submit">Sign Up</button>
             </form>
             <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
@@ -37,7 +37,7 @@
 
         <!-- Register Success -->
         <section class="register-success hide">
-            Ok, registered succeeded, you can now proceed to <a href="">login</a>.
+            Ok, registered succeeded, you can now proceed to <a href="">Log In</a>.
         </section>
 
         <!-- Login -->
@@ -47,7 +47,7 @@
                 <input type="email" id="email">
                 <label for="password">Password</label>
                 <input type="password" id="password">
-                <button type="submit">Login</button>
+                <button type="submit">Log In</button>
             </form>
             <p class="panel__feedback feedback feedback--error">A message.</p>
             <a href="">back</a>
@@ -56,14 +56,14 @@
         <!-- Home -->
         <section class="duck-home hide">
             <h2>Welcome!</h2>
-            <button>Logout</button>
+            <button>Log Out</button>
 
             <!-- Search -->
             <section class="search">
-                <h3>Search</h3>
+                <h3>Search your Duck</h3>
                 <form>
                     <input type="text" name="query">
-                    <button>Search</button>
+                    <button>search</button>
                 </form>
                 <p class="panel__feedback feedback feedback--error hide">A message.</p>
             </section>
