--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -19,14 +19,15 @@
     <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
     <script src="logic/index.js"></script>
-    <script src="logic/register-user/index.js"></script>
-    <script src="logic/authenticate-user/index.js"></script>
+     <script src="logic/register-user/index.js"></script>
+     <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
     <script src="logic/search-ducks/index.js"></script>
     <script src="logic/retrieve-duck/index.js"></script>
     <script src="logic/toggle-fav-duck/index.js"></script>
     <script src="logic/retrieve-fav-ducks/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
+    <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
