added validate tests

--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -13,11 +13,13 @@
 
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
+  <script src="utils/validate/index.js"></script>
   
 
 
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
+  <script src="utils/validate/index.spec.js"></script>
 
 
 
