add index and specrunner

--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -13,11 +13,15 @@
 
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
+  <script src="logic/register-user/index.js"></script>
+  <script src="logic/retrieve-user/index.js"></script>
   
 
 
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
+  <script src="logic/register-user/index.spec.js"></script>
+  <script src="logic/retrieve-user/index.spec.js"></script>
 
 
 
