--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -16,6 +16,9 @@
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
 
+    <script src="logic/register-user/index.js"></script>
+    <script src="logic/retrieve-user/index.js"></script>
+
     <script src="utils/call/index.js" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
