update logic and testing for user register

--- a/staff/groups/chuck-and-sons/chuck-project/logic/users/SpecRunner.html
+++ b/staff/groups/chuck-and-sons/chuck-project/logic/users/SpecRunner.html
@@ -12,9 +12,11 @@
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="index.js"></script>
   <script src="register-user/index.js"></script>
  
   <!-- include spec files here... -->
+  <script src="../utils/utils/validate/index.js"></script>
   <script src="register-user/index.spec.js"></script>
 
 </head>
