add index and spec

--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -14,12 +14,14 @@
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
   <script src="utils/validate/index.js"></script>
+  <script src="logic/register-user/index.js"></script>
   
 
 
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
   <script src="utils/validate/index.spec.js"></script>
+  <script src="logic/register-user/index.spec.js"></script>
 
 
 
