--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -14,6 +14,7 @@
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
   <script src="utils/validate/index.js"></script>
+  <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
   
 
