update landing page

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -20,6 +20,7 @@
     <script src="utils/call/index.js"></script>
     <script src="logic/index.js"></script>
     <script src="logic/register-user/index.js"></script>
+    <script src="components/landing.jsx"></script>
 
 
 
