add logic and testing for register-user

--- a/staff/groups/chuck-and-sons/chuck-project/logic/users/SpecRunner.html
+++ b/staff/groups/chuck-and-sons/chuck-project/logic/users/SpecRunner.html
@@ -13,10 +13,12 @@
 
   <!-- include source files here... -->
   <script src="index.js"></script>
+  <script src="../utils/utils/validate/index.js"></script>
+  <script src="../utils/utils/call/index.js"></script>
   <script src="register-user/index.js"></script>
  
   <!-- include spec files here... -->
-  <script src="../utils/utils/validate/index.js"></script>
+
   <script src="register-user/index.spec.js"></script>
 
 </head>
