--- a/staff/groups/over-cook-sa/overcooked/SpecRunner.html
+++ b/staff/groups/over-cook-sa/overcooked/SpecRunner.html
@@ -16,10 +16,12 @@
   <script src="utils/call/index.js"></script>
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
+  <script src="logic/retrieve-user/index.js"></script>
 
   <!-- include spec files here... -->
   <script src="utils/validate/index.js"></script>
   <script src="logic/register-user/index.spec.js"></script>
+  <script src="logic/retrieve-user/index.spec.js"></script>
 
 
 
