--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -27,7 +27,7 @@
   <script src="utils/call/index.spec.js"></script>
 
   <script src="logic/register-user/index.spec.js"></script>
-  <script src="logic/retrieve-user/index.spec.js"></script>
+  <script src="logic/retrieve-user/index-spec.js"></script>
   <script src="logic/search-tracks/index.spec.js"></script>
 
 
