complete logic and testing ofr user

--- a/staff/groups/chuck-and-sons/chuck-project/logic/users/SpecRunner.html
+++ b/staff/groups/chuck-and-sons/chuck-project/logic/users/SpecRunner.html
@@ -16,10 +16,14 @@
   <script src="../utils/utils/validate/index.js"></script>
   <script src="../utils/utils/call/index.js"></script>
   <script src="register-user/index.js"></script>
+  <script src="authenticate-user/index.js"></script>
+  <script src="retrieve-user/index.js"></script>
  
   <!-- include spec files here... -->
 
   <script src="register-user/index.spec.js"></script>
+  <script src="authenticate-user/index.spec.js"></script>
+  <script src="retrieve-user/index.spec.js"></script>
 
 </head>
 
