update memefy with fixed testing

--- a/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
+++ b/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
@@ -12,12 +12,26 @@
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="utils/call.js"></script>
-  <script src="data/index.js"></script>
+  <script src="utils/call/index.js"></script>
   <script src="logic/index.js"></script>
+  <script src="logic/register-user/index.js"></script>
+  <script src="logic/authenticate-user/index.js"></script>
+  <script src="logic/retrieve-user/index.js"></script>
+  <script src="logic/search-gifs/index.js"></script>
+  <script src="logic/retrieve-gif/index.js"></script>
+  <script src="logic/toggle-fav-gif/index.js"></script>
+  <script src="logic/retrieve-fav-gifs/index.js"></script>
 
   <!-- include spec files here... -->
-  <script src="logic/index.spec.js"></script>
+  <script src="utils/call/index.spec.js"></script>
+  <script src="utils/validate/index.js"></script>
+  <script src="logic/register-user/index.spec.js"></script>
+  <script src="logic/authenticate-user/index.spec.js"></script>
+  <script src="logic/retrieve-user/index.spec.js"></script>
+  <script src="logic/search-gifs/index.spec.js"></script>
+  <script src="logic/retrieve-gif/index.spec.js"></script>
+  <script src="logic/toggle-fav-gif/index.spec.js"></script>
+  <script src="logic/retrieve-fav-gifs/index.spec.js"></script>
 </head>
 
 <body>
