--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -16,9 +16,16 @@
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
 
-    <script src="utils/call.js"></script>
-    <script src="data/index.js"></script>
+    <script src="utils/validate/index.js"></script>
+    <script src="utils/call/index.js"></script>
     <script src="logic/index.js"></script>
+    <script src="logic/register-user/index.js"></script>
+    <script src="logic/authenticate-user/index.js"></script>
+    <script src="logic/retrieve-user/index.js"></script>
+    <script src="logic/search-gifs/index.js"></script>
+    <script src="logic/retrieve-gif/index.js"></script>
+    <script src="logic/toggle-fav-gif/index.js"></script>
+    <script src="logic/retrieve-fav-gifs/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
@@ -26,10 +33,11 @@
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
-    <script src="components/duck-item.jsx" type="text/babel"></script>
-    <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <script src="components/gif-item.jsx" type="text/babel"></script>
+    <script src="components/gif-detail.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
+    <script src="components/modal/index.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
