--- a/staff/groups/over-cook-sa/overcooked/SpecRunner.html
+++ b/staff/groups/over-cook-sa/overcooked/SpecRunner.html
@@ -8,32 +8,38 @@
   <link rel="shortcut icon" type="image/png" href="vendor/jasmine/jasmine-3.4.0/jasmine_favicon.png">
   <link rel="stylesheet" href="vendor/jasmine/jasmine-3.4.0/jasmine.css">
 
+</head>
+
+<body>
   <script src="vendor/jasmine/jasmine-3.4.0/jasmine.js"></script>
   <script src="vendor/jasmine/jasmine-3.4.0/jasmine-html.js"></script>
   <script src="vendor/jasmine/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
+  <script src="utils/validate/index.js"></script>
+
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/retrieve-random-recipe/index.js"></script>
   <script src="logic/search-by-name/index.js"></script>
-
-
+  <script src="logic/authenticate-user/index.js"></script>
+  <script src="logic/show-category/index.js"></script>
+  <script src="logic/toggle-fav-meal/index.js"></script>
+  
+  
   <!-- include spec files here... -->
-  <script src="utils/validate/index.js"></script>
+  <script src="utils/call/index.spec.js"></script>
+  <script src="utils/validate/index.spec.js"></script>
+
   <script src="logic/register-user/index.spec.js"></script>
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/retrieve-random-recipe/index.spec.js"></script>
   <script src="logic/search-by-name/index.spec.js"></script>
-
-
-
-
-</head>
-
-<body>
+  <script src="logic/authenticate-user/index.spec.js"></script>
+  <script src="logic/show-category/index.spec.js"></script>
+  <script src="logic/toggle-fav-meal/index.spec.js"></script>
 </body>
 
 </html>
