--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="componentes/collections/index.css">
-   <!--  <link rel="stylesheet" href="style/index.css"> -->
+    <!--  <link rel="stylesheet" href="style/index.css"> -->
 
 </head>
 
@@ -19,29 +17,28 @@
     <script src="vendor/react/16.8.6/react.development.js"></script>
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
-
     <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
     <script src="logic/index.js"></script>
-   <!--  <script src="logic/register-user/index.js"></script>
+    <!-- <script src="logic/register-user/index.js"></script> -->
     <script src="logic/authenticate-user/index.js"></script>
-    <script src="logic/retrieve-user/index.js"></script> -->
+    <!-- <script src="logic/retrieve-user/index.js"></script>  -->
     <script src="logic/search-movies/index.js"></script>
     <!-- <script src="logic/retrieve-duck/index.js"></script>
     <script src="logic/toggle-fav-duck/index.js"></script>
     <script src="logic/retrieve-fav-ducks/index.js"></script> -->
     <script src="components/app.jsx" type="text/babel"></script>
     <!-- <script src="components/register.jsx" type="text/babel"></script> -->
-    <script src="components/collections.jsx" type="text/babel"></script>
-    <!-- <script src="components/register.jsx" type="text/babel"></script>
-
+    <script src="components/collections/index.jsx" type="text/babel"></script>
+    <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/landing/index.jsx" type="text/babel"></script>
-    <script src="components/register-success.jsx" type="text/babel"></script>
-    <script src="components/login.jsx" type="text/babel"></script> -->
     <script src="components/search-movies/index.jsx" type="text/babel"></script>
-    <!-- <script src="components/results.jsx" type="text/babel"></script>
-    <script src="components/duck-item.jsx" type="text/babel"></script>
-    <script src="components/duck-detail.jsx" type="text/babel"></script>
+    <!-- <script src="components/register.jsx" type="text/babel"></script>
+   
+
+   
+    <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script> -->
