add spinner test

--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -38,6 +38,7 @@
     <script src="Components/article-item.jsx" type="text/babel"></script>
     <script src="Components/article-detail.jsx" type="text/babel"></script>
     <script src="Components/feedback/index.jsx" type="text/babel"></script>
+    <script src="Components/spinner.jsx" type="text/babel"></script>
 
 
 
