--- a/staff/groups/over-cook-sa/overcooked/SpecRunner.html
+++ b/staff/groups/over-cook-sa/overcooked/SpecRunner.html
@@ -19,6 +19,7 @@
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/retrieve-random-recipe/index.js"></script>
   <script src="logic/search-by-name/index.js"></script>
+  <script src="logic/retrieve-recipe/index.js"></script>
 
 
   <!-- include spec files here... -->
@@ -27,6 +28,7 @@
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/retrieve-random-recipe/index.spec.js"></script>
   <script src="logic/search-by-name/index.spec.js"></script>
+  <script src="logic/retrieve-recipe/index.spec.js"></script>
 
 
 
