authenticate logic first commit

--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -18,6 +18,7 @@
 
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
+  <script src="logic/authenticate-user/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/search-tracks/index.js"></script>
 
@@ -27,6 +28,7 @@
   <script src="utils/call/index.spec.js"></script>
 
   <script src="logic/register-user/index.spec.js"></script>
+  <script src="logic/authenticate-user/index.spec.js"></script>
   <script src="logic/retrieve-user/index-spec.js"></script>
   <script src="logic/search-tracks/index.spec.js"></script>
 
