--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -16,16 +16,20 @@
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.5.5/babel.min.js"></script>
 
-    <script src="utils/validate/index.js" type="text/babel"></script>
+    <!-- utils -->
+    <script src="utils/validate/index.js"></script>
+    <script src="utils/call/index.js"></script>
+    <script src="utils/token.js" ></script>
+    <script src="utils/validate/index.js"></script>
+    <script src="utils/call/index.js" ></script>
 
-    <script src="utils/call/index.js" type="text/babel"></script>
-    <script src="utils/token.js" type="text/babel"></script>
-    <script src="utils/validate/index.js" type="text/babel"></script>
-    <script src="utils/call/index.js" type="text/babel"></script>
-    <script src="logic/index.js" type="text/babel"></script>
+    <!-- logic -->
+    <script src="logic/index.js" ></script>
     <script src="logic/register-user/index.js"></script>
+    <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
-    <script src="logic/search-tracks/index.js" type="text/babel"></script>
+    <script src="logic/search-tracks/index.js"></script>
+    
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
