--- a/staff/groups/over-cook-sa/overcooked/SpecRunner.html
+++ b/staff/groups/over-cook-sa/overcooked/SpecRunner.html
@@ -14,24 +14,40 @@
 
   <!-- include source files here... -->
   <script src="utils/call/index.js"></script>
+  <script src="utils/validate/index.js"></script>
+
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
+  <script src="logic/authenticate-user/index.js"></script>
+
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/retrieve-random-recipe/index.js"></script>
-  <script src="logic/search-by-name/index.js"></script>
   <script src="logic/retrieve-recipe/index.js"></script>
+
+  <script src="logic/search-by-name/index.js"></script>
+  <script src="logic/search-ingredient/index.js"></script>
+  <script src="logic/show-category/index.js"></script>
+
+  <script src="logic/toggle-fav-meal/index.js"></script>
+  
 
 
   <!-- include spec files here... -->
-  <script src="utils/validate/index.js"></script>
+  <script src="utils/call/index.spec.js"></script>
+  <script src="utils/validate/index.spec.js"></script>
+
   <script src="logic/register-user/index.spec.js"></script>
+  <script src="logic/authenticate-user/index.spec.js"></script>
+
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/retrieve-random-recipe/index.spec.js"></script>
-  <script src="logic/search-by-name/index.spec.js"></script>
   <script src="logic/retrieve-recipe/index.spec.js"></script>
 
+  <script src="logic/search-by-name/index.spec.js"></script>
+  <script src="logic/search-ingredient/index.spec.js"></script>
+  <script src="logic/show-category/index.spec.js"></script>
 
-
+  <script src="logic/toggle-fav-meal/index.spec.js"></script>
 
 </head>
 
