--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body class="body">
@@ -26,20 +27,18 @@
     <script src="logic/search-news/index.js"></script>
 
     <!-- put all the component files -->
-    <script src="Components/app.jsx" type="text/babel"></script>
-    <script src="Components/landing.jsx" type="text/babel"></script>
-    <script src="Components/register.jsx" type="text/babel"></script>
-    <script src="Components/register-success.jsx" type="text/babel"></script>
-
-    <script src="Components/login.jsx" type="text/babel"></script>
-
-    <script src="Components/search.jsx" type="text/babel"></script>
-    <script src="Components/results.jsx" type="text/babel"></script>
-    <script src="Components/article-item.jsx" type="text/babel"></script>
-    <script src="Components/article-detail.jsx" type="text/babel"></script>
-    <script src="Components/feedback/index.jsx" type="text/babel"></script>
-    <script src="Components/spinner.jsx" type="text/babel"></script>
-
+    <script src="components/app.jsx" type="text/babel"></script>
+    <script src="components/landing.jsx" type="text/babel"></script>
+    <script src="components/register.jsx" type="text/babel"></script>
+    <script src="components/register-success.jsx" type="text/babel"></script>
+    <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
+    <script src="components/article-item.jsx" type="text/babel"></script>
+    <script src="components/article-detail.jsx" type="text/babel"></script>
+    <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/spinner.jsx" type="text/babel"></script>
+    <script src="components/fav-button.jsx" type="text/babel"></script>
 
 
 
