up comp landing

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -22,6 +22,8 @@
     <script src="logic/register-user/index.js"></script>
     <script src="components/landing.jsx"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="components/app.jsx" type="text/babel"></script>
+    <script src="components/landing.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
