--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -21,6 +21,8 @@
     <script src="logic/index.js"></script>
     <script src="logic/register-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="components/big-header.jsx" type="text/babel"></script>
+
 
 
 
