--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -26,6 +26,7 @@
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/big-header.jsx" type="text/babel"></script>
+    <script src="components/footer.jsx" type="text/babel"></script>
 
 
     <script src="index.jsx" type="text/babel"></script>
