--- a/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
+++ b/staff/groups/le-sky-martini-inc/memefy/SpecRunner.html
@@ -21,6 +21,7 @@
   <script src="logic/retrieve-gif/index.js"></script>
   <script src="logic/toggle-fav-gif/index.js"></script>
   <script src="logic/retrieve-fav-gifs/index.js"></script>
+  <script src="logic/get-random/index.js"></script>
 
   <!-- include spec files here... -->
   <script src="utils/call/index.spec.js"></script>
@@ -32,6 +33,7 @@
   <script src="logic/retrieve-gif/index.spec.js"></script>
   <script src="logic/toggle-fav-gif/index.spec.js"></script>
   <script src="logic/retrieve-fav-gifs/index.spec.js"></script>
+  <script src="logic/get-random/index.spec.js"></script>
 </head>
 
 <body>
