--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -26,12 +26,14 @@
     <script src="logic/retrieve-gif/index.js"></script>
     <script src="logic/toggle-fav-gif/index.js"></script>
     <script src="logic/retrieve-fav-gifs/index.js"></script>
+    <script src="logic/get-random/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/random.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/gif-item.jsx" type="text/babel"></script>
     <script src="components/gif-detail.jsx" type="text/babel"></script>
