--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -15,6 +15,8 @@
   <script src="utils/token.js"></script>
   <script src="utils/validate/index.js"></script>
   <script src="utils/call/index.js"></script>
+  <script src="utils/check-token/index.js"></script>
+
 
   <script src="logic/index.js"></script>
   <script src="logic/register-user/index.js"></script>
@@ -25,6 +27,8 @@
   <!-- include spec files here... -->
   <script src="utils/validate/index.spec.js"></script>
   <script src="utils/call/index.spec.js"></script>
+  <script src="utils/check-token/index.spec.js"></script>
+
 
   <script src="logic/register-user/index.spec.js"></script>
   <script src="logic/retrieve-user/index-spec.js"></script>
