--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -22,6 +22,7 @@
     <script src="utils/token.js" type="text/babel"></script>
     <script src="utils/validate/index.js" type="text/babel"></script>
     <script src="utils/call/index.js" type="text/babel"></script>
+    <script src="utils/check-token/index.js" type="text/babel"></script>
     <script src="logic/index.js" type="text/babel"></script>
     <script src="logic/register-user/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
