--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css'>
     <title>Document</title>
    <!--  <link rel="stylesheet" href="style/index.css"> -->
 </head>
@@ -36,9 +37,9 @@
     <script src="components/results/index.jsx" type="text/babel"></script>
     <script src="components/movie-item/index.jsx" type="text/babel"></script>
     <!--<script src="components/duck-detail.jsx" type="text/babel"></script>
-    <script src="components/feedback/index.jsx" type="text/babel"></script>
-    <script src="components/fav-button.jsx" type="text/babel"></script>
-    <script src="components/modal/index.jsx" type="text/babel"></script> -->
+    <script src="components/feedback/index.jsx" type="text/babel"></script> -->
+    <script src="components/fav-button/index.jsx" type="text/babel"></script>
+    <!-- <script src="components/modal/index.jsx" type="text/babel"></script> -->
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
