update random feature

--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -37,6 +37,7 @@
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/gif-item.jsx" type="text/babel"></script>
     <script src="components/gif-detail.jsx" type="text/babel"></script>
+    <script src="components/random-detail.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>
