--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -29,6 +29,8 @@
     <script src="components/big-header.jsx" type="text/babel"></script>
     <script src="components/footer.jsx" type="text/babel"></script>
     <script src="components/recipe-item.jsx" type="text/babel"></script>
+    <script src="components/welcome-anchors.jsx" type="text/babel"></script>
+
 
 
     <script src="index.jsx" type="text/babel"></script>
