uppdate register with home page with home page and mas mierda

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -19,11 +19,21 @@
 
     <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
+
     <script src="logic/index.js"></script>
     <script src="logic/register-user/index.js"></script>
+    <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/retrieve-random-recipe/index.js"></script>
-    <script src="components/landing.jsx"></script>
     <script src="logic/retrieve-user/index.js"></script>
+    <script src="logic/retrieve-recipe/index.js"></script>
+    <script src="logic/search-by-name/index.js"></script>
+    <script src="logic/search-ingredient/index.js"></script>
+    <script src="logic/show-category/index.js"></script>
+    <script src="logic/toggle-fav-meal/index.js"></script>
+
+
+    <script src="components/register.jsx" type="text/babel"></script>
+    <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/big-header.jsx" type="text/babel"></script>
