add changes to favorite

--- a/staff/groups/skynews-sa/0/SpecRunner.html
+++ b/staff/groups/skynews-sa/0/SpecRunner.html
@@ -20,6 +20,7 @@
   <script src="logic/register/index.js"></script>
   <script src="logic/search-news/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
+  <script src="logic/toggle-fav-art/index.js"></script>
 
 
 
@@ -29,6 +30,7 @@
   <script src="logic/authenticate/index.spec.js"></script>
   <script src="logic/search-news/index.spec.js"></script>
   <script src="logic/retrieve-user/index.spec.js"></script>
+  <script src="logic/toggle-fav-art/index.spec.js"></script>
 
 </head>
 
