--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -23,8 +23,10 @@
     <script src="logic/index.js"></script>
     <script src="logic/register/index.js"></script>
     <script src="logic/authenticate/index.js"></script>
-
+    <script src="logic/retrieve-article/index.js"></script>
     <script src="logic/search-news/index.js"></script>
+    <script src="logic/retrieve-user/index.js"></script>
+    <script src="logic/toggle-fav-art/index.js"></script>
 
     <!-- put all the component files -->
     <script src="components/app.jsx" type="text/babel"></script>
