--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -40,6 +40,7 @@
     <script src="components/footer.jsx" type="text/babel"></script>
     <script src="components/recipe-item.jsx" type="text/babel"></script>
     <script src="components/welcome-anchors.jsx" type="text/babel"></script>
+    <script src="components/register-success.jsx" type="text/babel"></script>
 
 
 
