--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -27,6 +27,7 @@
     <script src="logic/toggle-fav-gif/index.js"></script>
     <script src="logic/retrieve-fav-gifs/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
+    <script src="components/registerorlogin.jsx" type="text/babel"></script>
     <script src="components/landing.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
