--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -33,11 +33,8 @@
 
   <script src="logic/register-user/index.spec.js"></script>
   <script src="logic/authenticate-user/index.spec.js"></script>
-  <script src="logic/retrieve-user/index-spec.js"></script>
+  <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/search-tracks/index.spec.js"></script>
-
-
-
 
 </head>
 
