--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/index.css">
     <script src="https://kit.fontawesome.com/3bf2c7b64d.js"></script>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>
