update youtube random recipe

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -20,6 +20,7 @@
 
     <script src="utils/validate/index.js"></script>
     <script src="utils/call/index.js"></script>
+    <script src="utils/youtube-meal-parse/index.js"></script>
 
     <script src="logic/index.js"></script>
     <script src="logic/register-user/index.js"></script>
