--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -44,6 +44,7 @@
     <script src="components/welcome-anchors.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/feedback/index.jsx" type="text/babel"></script>
 
 
 
