retrieve user logic, test, credentials sessionStorage and logout fixed

--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -23,7 +23,7 @@
     <script src="logic/index.js"></script>
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
-    <!-- <script src="logic/retrieve-user/index.js"></script>  -->
+    <script src="logic/retrieve-user/index.js"></script>  
     <script src="logic/search-movies/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/register/index.jsx" type="text/babel"></script> 
