--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -25,16 +25,18 @@
     <script src="logic/authenticate-user/index.js"></script>
     <!-- <script src="logic/retrieve-user/index.js"></script>  -->
     <script src="logic/search-movies/index.js"></script>
+    <script src="logic/retrieve-movie/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/register/index.jsx" type="text/babel"></script> 
     <script src="components/collections/index.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
-    <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/login/index.jsx" type="text/babel"></script>
     <script src="components/landing/index.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/search-movies/index.jsx" type="text/babel"></script>
     <script src="components/results/index.jsx" type="text/babel"></script>
     <script src="components/movie-item/index.jsx" type="text/babel"></script>
+    <script src="components/movie-detail/index.jsx" type="text/babel"></script>
     <!-- <script src="components/fav-button.jsx" type="text/babel"></script>
     <script src="components/modal/index.jsx" type="text/babel"></script>  -->
     <script src="index.jsx" type="text/babel"></script>
