add toggle fav track

--- a/staff/groups/esputy-corp/esputyfu/SpecRunner.html
+++ b/staff/groups/esputy-corp/esputyfu/SpecRunner.html
@@ -23,6 +23,7 @@
   <script src="logic/authenticate-user/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/search-tracks/index.js"></script>
+  <script src="logic/toggle-fav-track/index.js"></script>
 
 
   <!-- include spec files here... -->
@@ -35,6 +36,7 @@
   <script src="logic/authenticate-user/index.spec.js"></script>
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/search-tracks/index.spec.js"></script>
+  <script src="logic/toggle-fav-track/index.spec.js"></script>
 
 </head>
 
