--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -33,25 +33,16 @@
     <script src="components/register/index.jsx" type="text/babel"></script> 
     <script src="components/collections/index.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
-<<<<<<< HEAD
     <script src="components/login/index.jsx" type="text/babel"></script>
-=======
->>>>>>> origin/movie-lab/develop
     <script src="components/landing/index.jsx" type="text/babel"></script>
     <script src="components/login/index.jsx" type="text/babel"></script>
     <script src="components/search-movies/index.jsx" type="text/babel"></script>
     <script src="components/results/index.jsx" type="text/babel"></script>
     <script src="components/movie-item/index.jsx" type="text/babel"></script>
-<<<<<<< HEAD
     <script src="components/movie-detail/index.jsx" type="text/babel"></script>
-    <!-- <script src="components/fav-button.jsx" type="text/babel"></script>
-    <script src="components/modal/index.jsx" type="text/babel"></script>  -->
-=======
-    <!--<script src="components/duck-detail.jsx" type="text/babel"></script>
-    <script src="components/feedback/index.jsx" type="text/babel"></script> -->
+    <script src="components/feedback/index.jsx" type="text/babel"></script> 
     <script src="components/fav-button/index.jsx" type="text/babel"></script>
-    <!-- <script src="components/modal/index.jsx" type="text/babel"></script> -->
->>>>>>> origin/movie-lab/develop
+
     <script src="index.jsx" type="text/babel"></script>
 </body>
 
