--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -26,6 +26,7 @@
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
     <script src="logic/toggle-fav-movie/index.js"></script>
+    <script src="logic/retrieve-fav-movies/index.js"></script>
     <!-- <script src="logic/retrieve-user/index.js"></script>  -->
     <script src="logic/search-movies/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
