home fix and small header

--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -44,6 +44,9 @@
     <script src="components/welcome-anchors.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
+    <script src="components/home.jsx" type="text/babel"></script>
+    <script src="components/small-header.jsx" type="text/babel"></script>
+   
 
 
 
