--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -32,6 +32,8 @@
     <script src="logic/retrieve-track/index.js" ></script>
     <script src="logic/toggle-fav-track/index.js"></script>
     
+    <!-- components -->
+    <script src="components/app.jsx" type="text/babel" ></script>
     <script src="index.jsx" type="text/babel" ></script>
 </body>
 
