add favorites component with condition for no favs

--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -39,6 +39,7 @@
     <script src="components/results/index.jsx" type="text/babel"></script>
     <script src="components/movie-item/index.jsx" type="text/babel"></script>
     <script src="components/fav-button/index.jsx" type="text/babel"></script>
+    <script src ="components/favorites/index.jsx" type="text/babel"></script>
     <!-- <script src="components/modal/index.jsx" type="text/babel"></script> -->
     <script src="index.jsx" type="text/babel"></script>
 </body>
