--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -34,6 +34,7 @@
     
     <!-- components -->
     <script src="components/app.jsx" type="text/babel" ></script>
+    <script src="components/login.jsx" type="text/babel" ></script>
     <script src="index.jsx" type="text/babel" ></script>
 </body>
 
