--- a/staff/groups/skynews-sa/0/SpecRunner.html
+++ b/staff/groups/skynews-sa/0/SpecRunner.html
@@ -21,6 +21,8 @@
   <script src="logic/search-news/index.js"></script>
   <script src="logic/retrieve-user/index.js"></script>
   <script src="logic/toggle-fav-art/index.js"></script>
+  <script src="logic/testWeather/index.js"></script>
+
 
 
 
@@ -31,6 +33,8 @@
   <script src="logic/search-news/index.spec.js"></script>
   <script src="logic/retrieve-user/index.spec.js"></script>
   <script src="logic/toggle-fav-art/index.spec.js"></script>
+  <script src="logic/testWeather/index.spec.js"></script>
+
 
 </head>
 
