--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -27,6 +27,8 @@
     <script src="logic/search-news/index.js"></script>
     <script src="logic/retrieve-user/index.js"></script>
     <script src="logic/toggle-fav-art/index.js"></script>
+    <script src="logic/testWeather/index.js"></script>
+
 
     <!-- put all the component files -->
     <script src="components/app.jsx" type="text/babel"></script>
