--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -38,6 +38,7 @@
     <script src="components/register.jsx" type="text/babel" ></script>
     <script src="components/register-success.jsx" type="text/babel" ></script>
     <script src="components/login.jsx" type="text/babel" ></script>
+    <script src="components/search.jsx" type="text/babel" ></script>
     <script src="index.jsx" type="text/babel" ></script>
 </body>
 
