add style to register

--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Esputifu</title>
     <!-- <link rel="stylesheet" href="style/index.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="components/register/index.css">
 </head>
 
 <body>
@@ -35,7 +37,7 @@
     <!-- components -->
     <script src="components/app.jsx" type="text/babel" ></script>
     <script src="components/landing.jsx" type="text/babel" ></script>
-    <script src="components/register.jsx" type="text/babel" ></script>
+    <script src="components/register/register.jsx" type="text/babel" ></script>
     <script src="components/register-success.jsx" type="text/babel" ></script>
     <script src="components/login.jsx" type="text/babel" ></script>
     <script src="index.jsx" type="text/babel" ></script>
