added header and footer compos

--- a/staff/groups/esputy-corp/esputyfu/index.html
+++ b/staff/groups/esputy-corp/esputyfu/index.html
@@ -34,6 +34,8 @@
     
     <!-- components -->
     <script src="components/app.jsx" type="text/babel" ></script>
+    <script src="components/header/index.jsx" type="text/babel" ></script>
+    <script src="components/footer/index.jsx" type="text/babel" ></script>
     <script src="components/landing.jsx" type="text/babel" ></script>
     <script src="components/register.jsx" type="text/babel" ></script>
     <script src="components/register-success.jsx" type="text/babel" ></script>
