--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -40,12 +40,16 @@
     <script src="components/big-header.jsx" type="text/babel"></script>
     <script src="components/footer.jsx" type="text/babel"></script>
     <script src="components/recipe-item.jsx" type="text/babel"></script>
+    <script src="components/recipe-item-2.jsx" type="text/babel"></script>
     <script src="components/welcome-anchors.jsx" type="text/babel"></script>
     <script src="components/register-success.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/small-header.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
+    
     
     <script src="index.jsx" type="text/babel"></script>
 </body>
