--- a/staff/groups/abesti-enterprise/bertsolab/index.html
+++ b/staff/groups/abesti-enterprise/bertsolab/index.html
@@ -20,14 +20,15 @@
 
     <script src="logic/register-user/index.js"></script>
     <script src="logic/authenticate-user/index.js"></script>
+    <script src="logic/search-songs/index.js"></script>
+    <script src="logic/cover-retrieve/index.js"></script>
+    <script src="logic/toggle-fav-track/index.js"></script>
+    <script src="logic/retrieve-lyrics/index.js"></script>
+
+
     
 
  
-
-
-
-
-
 
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/home.jsx" type="text/babel"></script>
@@ -35,6 +36,11 @@
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/feedback.jsx" type="text/babel"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
+    <script src="components/songItem.jsx" type="text/babel"></script>
+    <script src="components/fav_button.jsx" type="text/babel"></script>
+
+
 
 
 
