--- a/staff/groups/skynews-sa/0/index.html
+++ b/staff/groups/skynews-sa/0/index.html
@@ -43,6 +43,7 @@
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/spinner.jsx" type="text/babel"></script>
     <script src="components/fav-button.jsx" type="text/babel"></script>
+    <script src="components/modal/index.jsx" type="text/babel"></script>
 
 
 
