--- a/staff/groups/over-cook-sa/overcooked/index.html
+++ b/staff/groups/over-cook-sa/overcooked/index.html
@@ -46,6 +46,7 @@
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/small-header.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
+    <script src="components/recipe-details.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
