--- a/staff/groups/chuck-and-sons/chuck-project/index.html
+++ b/staff/groups/chuck-and-sons/chuck-project/index.html
@@ -20,6 +20,7 @@
     <script src="logic/index.js"></script>
 
     <script src="logic/api/categories/index.js"></script>
+    <script src="logic/api/synth/index.js"></script>
     <script src="logic/api/search/index.js"></script>
     <script src="logic/api/random/index.js"></script>
     <script src="logic/users/register-user/index.js"></script>
@@ -36,7 +37,8 @@
     <!-- <script src="components/button/index.jsx" type="text/babel"></script> -->
     <!-- <script src="components/synthButton/index.jsx" type="text/babel"></script> -->
     <script src="components/categories/index.jsx" type="text/babel"></script>
-    <script src="components/retrieveJokes/index.jsx" type="text/babel"></script>
+    <script src="components/synth-button/index.jsx" type="text/babel"></script>
+    <script src="components/retrieve-jokes/index.jsx" type="text/babel"></script>
     <script src="components/feedback/index.jsx" type="text/babel"></script>
     <script src="components/search/index.jsx" type="text/babel"></script>
 =======
