add custom lists functionality

--- a/staff/groups/alf-&-co/app/index.html
+++ b/staff/groups/alf-&-co/app/index.html
@@ -30,6 +30,9 @@
     <script src="logic/retrieve-fav-movies/index.js"></script>
     <script src="logic/search-movies/index.js"></script>
     <script src="logic/retrieve-movie/index.js"></script>
+    <script src="logic/create-list/index.js"></script>
+    <script src="logic/retrieve-list/index.js"></script>
+    <script src="logic/toggle-list-movies/index.js"></script>
     <script src="components/app.jsx" type="text/babel"></script>
     <script src="components/register/index.jsx" type="text/babel"></script> 
     <script src="components/collections/index.jsx" type="text/babel"></script>
@@ -44,6 +47,8 @@
     <script src="components/feedback/index.jsx" type="text/babel"></script> 
     <script src="components/fav-button/index.jsx" type="text/babel"></script>
     <script src ="components/favorites/index.jsx" type="text/babel"></script>
+    <script src ="components/list-modal/index.jsx" type="text/babel"></script>
+    <script src ="components/list-button/index.jsx" type="text/babel"></script>
     <!-- <script src="components/modal/index.jsx" type="text/babel"></script> -->
     <script src="index.jsx" type="text/babel"></script>
 </body>
