update 08/08 13:16  hasta hacer fav

--- a/staff/groups/abesti-enterprise/bertsolab/index.html
+++ b/staff/groups/abesti-enterprise/bertsolab/index.html
@@ -24,6 +24,8 @@
     <script src="logic/cover-retrieve/index.js"></script>
     <script src="logic/toggle-fav-track/index.js"></script>
     <script src="logic/retrieve-lyrics/index.js"></script>
+    <script src="logic/retrieve-user/index.js"></script>
+
 
 
     
@@ -39,6 +41,8 @@
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/songItem.jsx" type="text/babel"></script>
     <script src="components/fav_button.jsx" type="text/babel"></script>
+    <script src="components/display-lyrics.jsx" type="text/babel"></script> 
+    <script src="components/lyricsItem.jsx" type="text/babel"></script> 
 
 
 
