--- a/staff/groups/le-sky-martini-inc/memefy/index.html
+++ b/staff/groups/le-sky-martini-inc/memefy/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Bungee' rel='stylesheet'>
     <link rel="stylesheet" href="style/index.css">
     <script src="https://kit.fontawesome.com/0ebe3f9bf2.js"></script>
 </head>
